--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,10 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+  opacity:1;
   background: #ff00cc;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #8e22e7, #ff02cc);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #8f06ff, #ff0000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .App-header { 
