--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,34 @@
 .hrWidth {
   width: 30%;
 }
+
+.headline1 {
+  float: left;
+  width: 100%;
+  padding: 3em;
+  display: flex;
+  flex-direction: row;
+}
+
+.headline-desc {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.headline-desc head {
+  text-align: center;
+  font-size: 4em;
+  width: 100%;
+}
+
+p {
+  text-align: center;
+  font-size: 1.2em;
+  padding: 1em;
+  width: 100%;
+}
+
+h1 {
+  font-size: large;
+}
