--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
   color: white;
   position: relative;
   background-image: url("Images/background.jpg");
+  background-size: cover;
 }
 
 .hrWidth {
