--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   font-family: 'Geraldine';
   src: local('Geraldine'), url("./Fonts/Geraldine.ttf") format('truetype');
 }
+
 @font-face {
   font-family: 'QuickKiss';
   src: local('QuickKiss'), url("./Fonts/QuickKiss.ttf") format('truetype');
@@ -10,29 +11,21 @@
 .App {
   text-align: center;
   background: #ff00cc; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #ff00cc, #333399); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #ff00cc, #333399); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #ff00cc, #333399); 
+  background: linear-gradient(to right, #ff00cc, #333399);
 }
 
 .quickkiss {
   font-family: "QuickKiss";
 }
+
 .geraldine {
   font-family: "Geraldine";
 }
-.particles {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background: #ff00cc;  /* fallback for old browsers
-  background: -webkit-linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-} 
 
 .home-header { 
   min-height: calc(70vh);
-  margin-bottom: 2em;
+  /* margin-bottom: 2em; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,6 +47,10 @@
   padding: 3em;
   display: flex;
   flex-direction: row;
+
+  background: #ff00cc; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff00cc, #333399); 
+  background: linear-gradient(to right, #ff00cc, #333399);
 }
 
 .headline-desc {
