Animate homepage and adjust image width

--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,12 @@
   width: 30%;
 }
 
-.headline1 {
-  float: left;
+.content {
   width: 100%;
+  padding: 2em;
+}
+
+.headline1 {
   padding: 3em;
   display: flex;
   flex-direction: row;
@@ -54,16 +57,18 @@
 }
 
 .headline-desc {
-  width: 100%;
+  width: 50%;
+  height: 50%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
-.headline-desc head {
+/* .headline-desc head {
   text-align: center;
   font-size: 4em;
   width: 100%;
-}
+} */
 
 p {
   text-align: center;
@@ -75,3 +80,28 @@ p {
 h1 {
   font-size: large;
 }
+
+.home-image {
+  width: 50%;
+  height: 50%;
+}
+
+.more {
+  font-size: 2em;
+  color: white;
+  text-decoration: none;
+}
+
+.more:link, .more:visited {
+  text-decoration: none;
+}
+
+.more:active, .more:hover {
+  text-decoration: underline;
+}
+
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
