--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,45 @@ h1 {
   text-decoration: underline;
 }
 
+.header {
+  position: fixed;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 3em;
+  z-index: 999;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-title {
+  justify-content: flex-start;
+  margin-left: 0.5em;
+}
+
+.header-links {
+  display: flex;
+  flex-direction: row;
+}
+
+.h-link {
+  color: aqua;
+  margin-right: 1em;
+  z-index: 1000;
+}
+
+.footer {
+  background-color: darkslategray;
+  color: white;
+  height: 4em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 /* * {
   background: #000 !important;
   color: #0f0 !important;
