--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* Fonts */
 @font-face {
   font-family: 'Geraldine';
   src: local('Geraldine'), url("./Fonts/Geraldine.ttf") format('truetype');
@@ -8,13 +9,6 @@
   src: local('QuickKiss'), url("./Fonts/QuickKiss.ttf") format('truetype');
 }
 
-.App {
-  text-align: center;
-  background: #ff00cc; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #ff00cc, #333399); 
-  background: linear-gradient(to right, #ff00cc, #333399);
-}
-
 .quickkiss {
   font-family: "QuickKiss";
 }
@@ -23,9 +17,17 @@
   font-family: "Geraldine";
 }
 
+/* App */
+.App {
+  text-align: center;
+  background: #ff00cc; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff00cc, #333399); 
+  background: linear-gradient(to right, #ff00cc, #333399);
+}
+
+/* Header */
 .home-header { 
   min-height: calc(70vh);
-  /* margin-bottom: 2em; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,16 +46,29 @@
 .content {
   width: 100%;
   padding: 2em;
-}
-
-.headline1 {
-  padding: 3em;
-  display: flex;
-  flex-direction: row;
-
   background: #ff00cc; /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ff00cc, #333399); 
   background: linear-gradient(to right, #ff00cc, #333399);
+  justify-content: center !important;
+}
+
+.headline1 {
+  /* padding: 3em; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+@media screen and (max-width: 750px) {
+  .headline1 {
+    flex-direction: column;
+  }
+  .home-image{
+    width: 100% !important;
+  }
+  .headline-desc{
+    width: 100% !important;
+  }
 }
 
 .headline-desc {
@@ -61,14 +76,7 @@
   height: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
-
-/* .headline-desc head {
-  text-align: center;
-  font-size: 4em;
-  width: 100%;
-} */
 
 p {
   text-align: center;
@@ -82,8 +90,8 @@ h1 {
 }
 
 .home-image {
-  width: 50%;
-  height: 50%;
+  width: 500px;
+  height: 100%;
 }
 
 .more {
@@ -101,16 +109,21 @@ h1 {
 }
 
 .header {
-  position: fixed;
-  background-color: black;
-  color: white;
   width: 100%;
-  height: 3em;
-  z-index: 999;
+  height: 75px;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  background-color: white;
+  color: black;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+.pages {
+  margin-top: 60px
 }
 
 .header-title {
@@ -124,7 +137,7 @@ h1 {
 }
 
 .h-link {
-  color: aqua;
+  color: black;
   margin-right: 1em;
   z-index: 1000;
 }
@@ -138,9 +151,3 @@ h1 {
   align-items: center;
   justify-content: center;
 }
-
-/* * {
-  background: #000 !important;
-  color: #0f0 !important;
-  outline: solid #f00 1px !important;
-} */
