Mobile optimization for navbar headin

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 }
 
 .home-header { 
-  min-height: calc(70vh);
+  min-height: calc(90vh);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -142,6 +142,15 @@ h1 {
   color: black;
   margin-right: 1em;
   z-index: 1000;
+}
+
+@media screen and (max-width: 750px) {
+  .header-links {
+    display: none;
+  }
+  .header{
+    justify-content: center;
+  }
 }
 
 /* Footer */
