--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,9 @@
   background: linear-gradient(to right, #ff00cc, #333399);
 }
 
+/* Header */
 .home-header { 
-  min-height: calc(90vh);
+  min-height: calc(70vh);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +43,6 @@
   width: 30%;
 }
 
-/* Home Page Cards */
 .content {
   width: 100%;
   padding: 2em;
@@ -57,6 +57,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-bottom: 2em;
 }
 
 @media screen and (max-width: 750px) {
@@ -94,7 +95,6 @@ h1 {
   height: 100%;
 }
 
-/* Home Pre Footer */
 .more {
   font-size: 2em;
   color: white;
@@ -109,15 +109,14 @@ h1 {
   text-decoration: underline;
 }
 
-/* Header */
 .header {
   width: 100%;
   height: 75px;
   position: fixed;
   top: 0;
   z-index: 2;
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -130,7 +129,10 @@ h1 {
 
 .header-title {
   justify-content: flex-start;
+  font-size: 1.5em;
   margin-left: 0.5em;
+  color: white;
+  text-decoration: none;
 }
 
 .header-links {
@@ -139,21 +141,16 @@ h1 {
 }
 
 .h-link {
-  color: black;
-  margin-right: 1em;
+  color: white;
+  margin-right: 1.5em;
+  text-decoration: none;
   z-index: 1000;
 }
 
-@media screen and (max-width: 750px) {
-  .header-links {
-    display: none;
-  }
-  .header{
-    justify-content: center;
-  }
+.h-link:hover {
+  color:cornflowerblue;
 }
 
-/* Footer */
 .footer {
   background-color: darkslategray;
   color: white;
