--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,11 @@
 /* App */
 .App {
   text-align: center;
-  background: #ff00cc; /* fallback for old browsers */
+  background: #ff00cc;
   background: -webkit-linear-gradient(to right, #ff00cc, #333399); 
   background: linear-gradient(to right, #ff00cc, #333399);
+  /* background: url(https://static.vecteezy.com/system/resources/previews/000/196/231/original/vector-blue-topographic-contour-lines-background.jpg);
+  background-size: cover; */
 }
 
 /* Header */
@@ -46,9 +48,11 @@
 .content {
   width: 100%;
   padding: 2em;
-  background: #ff00cc; /* fallback for old browsers */
+  background: #ff00cc;
   background: -webkit-linear-gradient(to right, #ff00cc, #333399); 
   background: linear-gradient(to right, #ff00cc, #333399);
+  /* background: url(https://static.vecteezy.com/system/resources/previews/000/196/231/original/vector-blue-topographic-contour-lines-background.jpg);
+  background-size: cover; */
   justify-content: center !important;
 }
 
@@ -151,9 +155,9 @@ h1 {
   color:cornflowerblue;
 }
 
-.sponsors {
-  background: url(http://i.giphy.com/5lF3pQpdquCBy.gif);
-}
+/* .sponsors {
+  background: url(https://static.vecteezy.com/system/resources/previews/000/196/231/original/vector-blue-topographic-contour-lines-background.jpg);
+} */
 
 .height-100 {
   height: 100vh;
