--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,17 @@ h1 {
   z-index: 1000;
 }
 
+.h-reg-link {
+  color: white;
+  margin-right: 1.5em;
+  text-decoration: none;
+  z-index: 1000;
+}
+
+.h-reg-link:hover {
+  background-color: #96ccff;
+}
+
 .h-link:hover {
   color:cornflowerblue;
 }
@@ -177,4 +188,14 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+
+.custom {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 85vh;
+  font-size: larger;
+  color: aliceblue;
 }
