--- a/src/App.css
+++ b/src/App.css
@@ -127,9 +127,9 @@ h1 {
   justify-content: space-between;
 }
 
-.pages {
+/* .pages {
   margin-top: 60px
-}
+} */
 
 .header-title {
   justify-content: flex-start;
